cargo
   Compiling diskcortex v0.1.0 (/Users/ruben/Code/DiskCortex)
   Compiling diskcortex v0.1.0 (/Users/ruben/Code/DiskCortex)
warning: unused import: `detector::*`
 --> src/tools/mod.rs:6:9
  |
6 | pub use detector::*;
  |         ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `detector::*`
 --> src/tools/mod.rs:6:9
  |
6 | pub use detector::*;
  |         ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `RiskLevel`
 --> src/tui/app.rs:4:44
  |
4 | use crate::tools::registry::{ToolCategory, RiskLevel};
  |                                            ^^^^^^^^^

warning: unused import: `RiskLevel`
 --> src/tui/app.rs:4:44
  |
4 | use crate::tools::registry::{ToolCategory, RiskLevel};
  |                                            ^^^^^^^^^

warning: unused import: `Tabs`
 --> warning: unused import: `Tabs`
 --> src/tui/ui.rs:9:65
  |
9 |     widgets::{Block, Borders, Clear, List, ListItem, Paragraph, Tabs},
  |                                                                 ^^^^

src/tui/ui.rs:9:65
  |
9 |     widgets::{Block, Borders, Clear, List, ListItem, Paragraph, Tabs},
  |                                                                 ^^^^

warning: unused import: `ui::*`
 --> src/tui/mod.rs:8:9
  warning: unused import: `ui::*`
 --> src/tui/mod.rs:8:9
  |
8 | pub use ui::*;
  |         ^^^^^

|
8 | pub use ui::*;
  |         ^^^^^

warning: unused import: `serde::Deserialize`
 --> src/config/loader.rs:4:5
  |
4 | use serde::Deserialize;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `serde::Deserialize`
 --> src/config/loader.rs:4:5
  |
4 | use serde::Deserialize;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `Path`
 --> src/config/loader.rs:7:17
  |
7 warning: unused import: `Path`
 --> src/config/loader.rs:7:17
  |
7 | use std::path::{Path, PathBuf};
  |                 ^^^^

| use std::path::{Path, PathBuf};
  |                 ^^^^

warning: unused import: `RiskLevel`
 warning: unused import: `RiskLevel`
 --> src/config/validator.rs:3:34
  |
3 | use super::settings::{AppConfig, RiskLevel};
  --> src/config/validator.rs:3:34
  |
3 | use super::settings::{AppConfig, RiskLevel};
  |                                  ^^^^^^^^^

|                                  ^^^^^^^^^

warning: unused import: `std::path::Path`
 warning: unused import: `std::path::Path`
 --> src/config/validator.rs:4:5
  |
4 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

--> src/config/validator.rs:4:5
  |
4 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `std::path::PathBuf`
 --> warning: unused import: `std::path::PathBuf`
 --> src/cleaner/report.rs:4:5
  |
4 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^

src/cleaner/report.rs:4:5
  |
4 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find function `hash_password` in crate `argon2`
   --> src/daemon/db/mod.rs:114:33
    |
114 |     let password_hash = argon2::hash_password(
    |                                 ^^^^^^^^^^^^^ not found in `argon2`

error[E0425]: cannot find function `hash_password` in crate `argon2`
   --> src/daemon/db/mod.rs:114:33
    |
114 |     let password_hash = argon2::hash_password(
    |                                 ^^^^^^^^^^^^^ not found in `argon2`

For more information about this error, try `rustc --explain E0425`.
For more information about this error, try `rustc --explain E0425`.
error: could not compile `diskcortex` (bin "diskcortex-daemon" test) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `diskcortex` (bin "diskcortex-daemon" test) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
warning: unused variable: `app`
   --> src/tui/ui.rs:130:30
    |warning: unused variable: `app`
   --> src/tui/ui.rs:130:30
    |
130 | fn draw_tools(f: &mut Frame, app: &App, area: Rect) {
    |                              ^^^ help: if this is intentional, prefix it with an underscore: `_app`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default


130 | fn draw_tools(f: &mut Frame, app: &App, area: Rect) {
    |                              ^^^ help: if this is intentional, prefix it with an underscore: `_app`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `app`
   --> src/tui/ui.rs:178:33
    |
warning: unused variable: `app`
   --> src/tui/ui.rs:178:33
    |
178 | fn draw_settings(f: &mut Frame, app: &App, area: Rect) {
    |                                 ^^^ help: if this is intentional, prefix it with an underscore: `_app`

178 | fn draw_settings(f: &mut Frame, app: &App, area: Rect) {
    |                                 ^^^ help: if this is intentional, prefix it with an underscore: `_app`

warning: unused variable: `config`
   --> src/config/loader.rs:204:13
    |
204 |         let config = loader.load().unwrap_or_default();
    |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_config`

warning: unused variable: `config`
   --> src/config/loader.rs:204:13
    |
204 |         let config = loader.load().unwrap_or_default();
    |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_config`

warning: fields `category`, `paths`, and `description` are never read
  --> src/tools/detector.rs:11:9
   |
 8 | pub struct DetectedTool {
   |            ------------ fields in this struct
...
11 |     pub category: ToolCategory,
   |         ^^^^^^^^
12 |     pub paths: Vec<PathBuf>,
   |         ^^^^^
...
15 |     pub description: String,
   |         ^^^^^^^^^^^
   |
   = note: `DetectedTool` has derived impls for the traits `Clone` and `Debug`, but these are intentionally ignored during dead code analysis
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: fields `category`, `paths`, and `description` are never read
  --> src/tools/detector.rs:11:9
   |
 8 | pub struct DetectedTool {
   |            ------------ fields in this struct
...
11 |     pub category: ToolCategory,
   |         ^^^^^^^^
12 |     pub paths: Vec<PathBuf>,
   |         ^^^^^
...
15 |     pub description: String,
   |         ^^^^^^^^^^^
   |
   = note: `DetectedTool` has derived impls for the traits `Clone` and `Debug`, but these are intentionally ignored during dead code analysis
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: field `use_trash` is never read
  --> src/cleaner/executor.rs:12:5
   |
10 | pub struct CleanupExecutor {
   warning: field `use_trash` is never read
  --> src/cleaner/executor.rs:12:5
   |
10 | pub struct CleanupExecutor {
   |            --------------- field in this struct
11 |     dry_run: bool,
12 |     use_trash: bool,
   |     ^^^^^^^^^|            --------------- field in this struct
11 |     dry_run: bool,
12 |     use_trash: bool,
   |     ^^^^^^^^^



warning: `diskcortex` (bin "diskcortex" test) generated 14 warnings (run `cargo fix --bin "diskcortex" -p diskcortex --tests` to apply 12 suggestions)
warning: `diskcortex` (bin "diskcortex" test) generated 14 warnings (run `cargo fix --bin "diskcortex" -p diskcortex --tests` to apply 12 suggestions)
